--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <a href="Cadastro/cadastro.html">Cadastre-se</a>
     </div>
     
-    <script src=""></script>
+    <script src="script.js"></script>
 </body>
 </html>
